force-app/main/default/objects/ssot__Case__dlm/ssot__Case__dlm.object-meta.xml
<CustomObject>
    <label>Case</label>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
        <referenceEntityGroup>Case</referenceEntityGroup>
        <referenceEntityName>Case</referenceEntityName>
        <referenceEntitySubjectArea>Case</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>