force-app/main/default/objects/ssot__Case__dlm/fields/Action_Priority__c.field-meta.xml
<CustomField>
    <fullName>Action_Priority__c</fullName>
    <label>Action Priority</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>