force-app/main/default/objects/ssot__Case__dlm/fields/Case_Creation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Reason__c</fullName>
    <label>Case Creation Reason</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>true</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>