force-app/main/default/objects/ssot__Case__dlm/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <label>Is Escalated</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>